<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="@dimen/profile_avatar_size"
        android:layout_height="@dimen/profile_avatar_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="Your Name"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:text="@string/profile_downloaded"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
